# CMakeList.txt : CMake project for data_structures, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (data_structures "data_structures.h" "data_structures_test.cpp" "test.h")

# TODO: Add tests and install targets if needed.
